processed/gerrit/txt/35257.txt
Change:     35257
Subject:    LU-12447 utils: specify correct size for lfs project buffer
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/35257
Change-Id:  Ia6429c47391bf503546609ec6a262fe24664bdd4
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Wang Shilong
Created:    2019-06-18 00:51:48.000000000
Updated:    2019-06-21 04:36:58.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Gu Zheng: +1; James Simmons: +1; Andreas Dilger: +1; Oleg Drokin: +2
  Verified: Jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Jenkins, Oleg Drokin, Andreas Dilger, Alex Zhuravlev, James Simmons, Gu Zheng

--- Commit Message ---
LU-12447 utils: specify correct size for lfs project buffer

Enviorment:
Fedora release 28 (Twenty Eight)

gcc (GCC) 8.0.1 20180324 (Red Hat 8.0.1-0.20)
Copyright (C) 2018 Free Software Foundation, Inc.

Hit build failure:
lfs_project.c: In function ‘lfs_project_item_alloc’:
lfs_project.c:72:2: error: ‘strncpy’ specified bound 4096
equals destination size [-Werror=stringop-truncation]
  strncpy(lpi->lpi_pathname, pathname, sizeof(lpi->lpi_pathname));
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Test-Parameters: trivial testlist=sanity-quota
Change-Id: Ia6429c47391bf503546609ec6a262fe24664bdd4
Signed-off-by: Wang Shilong <wshilong@ddn.com>
Reviewed-on: https://review.whamcloud.com/35257
Tested-by: Jenkins
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Gu Zheng <gzheng@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Wang Shilong, 2019-06-18 00:51:48.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2019-06-18 00:55:05.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-06-18 01:02:52.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (Jenkins, 2019-06-18 01:24:07.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/6131/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/65871/ : SUCCESS

--- Message (Autotest, 2019-06-18 01:24:59.000000000) ---
Patch Set 1:

Trevis Autotest started enforced custom session for build 65871. The following test parameters were specified: trivial=true testlist=sanity-quota.

--- Message (Autotest, 2019-06-18 01:24:59.000000000) ---
Patch Set 1:

Trevis Autotest started enforced review-ldiskfs-dne session for build 65871.

--- Message (Autotest, 2019-06-18 05:41:00.000000000) ---
Patch Set 1:

Trevis Autotest retesting enforced review-ldiskfs-dne session for build 65871. Requested by wangshilong because of LU-11170.

--- Message (Oleg Drokin, 2019-06-20 05:09:51.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Andreas Dilger, 2019-06-20 15:02:58.000000000) ---
Patch Set 1: Code-Review+1

--- Message (James Simmons, 2019-06-21 02:22:14.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Gu Zheng, 2019-06-21 02:34:28.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2019-06-21 04:36:55.000000000) ---
Patch Set 1: Code-Review+2

--- Message (unknown, 2019-06-21 04:36:58.000000000) ---
Change has been successfully cherry-picked as ffef6e3271ad1136d3ab1c2ee229b4690a6722a0 by Oleg Drokin
